--- a/arch/arm64/configs/agni_kenzo-cmMM_defconfig
+++ b/arch/arm64/configs/agni_kenzo-cmMM_defconfig
@@ -1887,7 +1887,7 @@ CONFIG_I2C_MSM_V2=y
 # CONFIG_I2C_DEBUG_ALGO is not set
 # CONFIG_I2C_DEBUG_BUS is not set
 CONFIG_SLIMBUS=y
-# CONFIG_SLIMBUS_MSM_CTRL is not set
+CONFIG_SLIMBUS_MSM_CTRL=y
 CONFIG_SLIMBUS_MSM_NGD=y
 CONFIG_SOUNDWIRE=y
 CONFIG_SOUNDWIRE_WCD_CTRL=y
