arm: mach-msm: added msm_hotplug
adopt msm_hotplug by @neobuddy89

make it compatible with dior and make a little tweake on it

Signed-off-by: msfkonsole <msfkonsole@gmail.com>

--- a/arch/arm/mach-msm/Kconfig
+++ b/arch/arm/mach-msm/Kconfig
@@ -2870,6 +2870,14 @@ config MSM_DCVS
 	  algorithm and the algorithm returns a frequency for the core which is
 	  passed to the frequency change driver.
 
+config MSM_HOTPLUG
+ 	bool "MSM hotplug driver"
+ 	depends on HOTPLUG_CPU
+ 	default y
+ 	help
+ 	  The MSM hotplug driver controls on-/offlining of additional cores based
+ 	  on current cpu load.
+
 config MSM_CPR
 	tristate "Use MSM CPR in S/W mode"
 	help
