add /dev/frandom support
Signed-off-by: msfkonsole <msfkonsole@gmail.com>

--- a/arch/arm/configs/dior_custom_defconfig
+++ b/arch/arm/configs/dior_custom_defconfig
@@ -1717,6 +1717,7 @@ CONFIG_UNIX98_PTYS=y
 # CONFIG_TRACE_SINK is not set
 # CONFIG_DEVMEM is not set
 # CONFIG_DEVKMEM is not set
+CONFIG_FRANDOM=y
 
 #
 # Serial drivers
