--- a/drivers/misc/Kconfig
+++ b/drivers/misc/Kconfig
@@ -640,11 +640,12 @@ config QCOM_LIQUID_DOCK
 	  the docking station of various models of Qualcomm Technology's
 	  LiQUID Mobile Development Platforms.
 
-config UID_CPUTIME
-	tristate "Per-UID cpu time statistics"
+config UID_SYS_STATS
+	tristate "Per-UID statistics"
 	depends on PROFILING
 	help
 	  Per UID based cpu time statistics exported to /proc/uid_cputime
+	  Per UID based io statistics exported to /proc/uid_io
 
 config MIUI_8_QCRYPTO_MODULES_HACK
 	bool "QCRYPTO modules hack for MIUI ROMS"
