--- a/arch/arm64/configs/agni_kenzo-miuiMM_defconfig
+++ b/arch/arm64/configs/agni_kenzo-miuiMM_defconfig
@@ -43,7 +43,7 @@ CONFIG_BUILDTIME_EXTABLE_SORT=y
 #
 CONFIG_INIT_ENV_ARG_LIMIT=32
 CONFIG_CROSS_COMPILE=""
-CONFIG_LOCALVERSION="-India-AGNi_pureMIUI-MM_v7.1-MSM8956"
+CONFIG_LOCALVERSION="-India-AGNi_pureMIUI-MM_v7.1.1-MSM8956"
 CONFIG_LOCALVERSION_AUTO=y
 CONFIG_DEFAULT_HOSTNAME="(none)"
 CONFIG_SWAP=y
@@ -1066,7 +1066,6 @@ CONFIG_OF_PCI=y
 CONFIG_OF_PCI_IRQ=y
 CONFIG_OF_SPMI=y
 CONFIG_OF_SLIMBUS=y
-CONFIG_OF_CORESIGHT=y
 CONFIG_OF_BATTERYDATA=y
 CONFIG_OF_RESERVED_MEM=y
 # CONFIG_PARPORT is not set
@@ -3563,27 +3562,7 @@ CONFIG_MOBICORE_API=y
 #
 CONFIG_ANDROID_BINDER_IPC=y
 CONFIG_ANDROID_BINDER_DEVICES="binder,hwbinder"
-CONFIG_CORESIGHT=y
-CONFIG_CORESIGHT_EVENT=y
-CONFIG_HAVE_CORESIGHT_SINK=y
-CONFIG_CORESIGHT_FUSE=y
-CONFIG_CORESIGHT_CTI=y
-CONFIG_CORESIGHT_CTI_SAVE_DISABLE=y
-CONFIG_CORESIGHT_CSR=y
-CONFIG_CORESIGHT_TMC=y
-CONFIG_CORESIGHT_TPIU=y
-CONFIG_CORESIGHT_FUNNEL=y
-CONFIG_CORESIGHT_REPLICATOR=y
-# CONFIG_CORESIGHT_TPDA is not set
-# CONFIG_CORESIGHT_TPDM is not set
-# CONFIG_CORESIGHT_DBGUI is not set
-CONFIG_CORESIGHT_STM=y
-# CONFIG_CORESIGHT_STM_DEFAULT_ENABLE is not set
-CONFIG_CORESIGHT_HWEVENT=y
-# CONFIG_CORESIGHT_ETM is not set
-# CONFIG_CORESIGHT_ETMV4 is not set
-# CONFIG_CORESIGHT_REMOTE_ETM is not set
-# CONFIG_CORESIGHT_QPDI is not set
+# CONFIG_CORESIGHT is not set
 # CONFIG_BIF is not set
 CONFIG_SENSORS=y
 CONFIG_SENSORS_SSC=y
