Update AGNi pureMIUI/CM v7.2 configs

--- a/arch/arm64/configs/agni_kenzo-cmNwm_defconfig
+++ b/arch/arm64/configs/agni_kenzo-cmNwm_defconfig
@@ -43,7 +43,7 @@ CONFIG_BUILDTIME_EXTABLE_SORT=y
 #
 CONFIG_INIT_ENV_ARG_LIMIT=32
 CONFIG_CROSS_COMPILE=""
-CONFIG_LOCALVERSION="-India-AGNi_pureCM-Nwm_v7.1.1-MSM8956"
+CONFIG_LOCALVERSION="-India-AGNi_pureCM-Nwm_v7.2-MSM8956"
 CONFIG_LOCALVERSION_AUTO=y
 CONFIG_DEFAULT_HOSTNAME="(none)"
 CONFIG_SWAP=y
@@ -267,7 +267,7 @@ CONFIG_BLOCK_COMPAT=y
 #
 # IO Schedulers
 #
-# CONFIG_IOSCHED_NOOP is not set
+CONFIG_IOSCHED_NOOP=y
 # CONFIG_IOSCHED_TEST is not set
 CONFIG_IOSCHED_DEADLINE=y
 CONFIG_IOSCHED_ROW=y
@@ -483,6 +483,7 @@ CONFIG_CPU_FREQ_DEFAULT_GOV_PERFORMANCE=y
 # CONFIG_CPU_FREQ_DEFAULT_GOV_DESPAIR is not set
 # CONFIG_CPU_FREQ_DEFAULT_GOV_ELEMENTALX is not set
 # CONFIG_CPU_FREQ_DEFAULT_GOV_BLU_ACTIVE is not set
+# CONFIG_CPU_FREQ_DEFAULT_GOV_CAFACTIVE is not set
 CONFIG_CPU_FREQ_GOV_PERFORMANCE=y
 CONFIG_CPU_FREQ_GOV_POWERSAVE=y
 CONFIG_CPU_FREQ_GOV_USERSPACE=y
@@ -491,6 +492,7 @@ CONFIG_CPU_FREQ_GOV_INTERACTIVE=y
 CONFIG_CPU_FREQ_GOV_CHILL=y
 CONFIG_CPU_FREQ_GOV_BIOSHOCK=y
 CONFIG_CPU_FREQ_GOV_ELEMENTALX=y
+CONFIG_CPU_FREQ_GOV_CAFACTIVE=y
 CONFIG_CPU_FREQ_GOV_CONSERVATIVE=y
 CONFIG_CPU_FREQ_GOV_IMPULSE=y
 CONFIG_CPU_FREQ_GOV_DARKNESS=y
@@ -580,12 +582,16 @@ CONFIG_TCP_CONG_HSTCP=y
 # CONFIG_TCP_CONG_VENO is not set
 # CONFIG_TCP_CONG_YEAH is not set
 # CONFIG_TCP_CONG_ILLINOIS is not set
+CONFIG_TCP_CONG_SOCIOPATH=y
+CONFIG_TCP_CONG_CDG=y
 # CONFIG_DEFAULT_BIC is not set
 # CONFIG_DEFAULT_CUBIC is not set
 # CONFIG_DEFAULT_HTCP is not set
-CONFIG_DEFAULT_WESTWOOD=y
+# CONFIG_DEFAULT_WESTWOOD is not set
+CONFIG_DEFAULT_SOCIOPATH=y
+# CONFIG_DEFAULT_CDG is not set
 # CONFIG_DEFAULT_RENO is not set
-CONFIG_DEFAULT_TCP_CONG="westwood"
+CONFIG_DEFAULT_TCP_CONG="sociopath"
 # CONFIG_TCP_MD5SIG is not set
 CONFIG_IPV6=y
 CONFIG_IPV6_PRIVACY=y
@@ -2666,6 +2672,7 @@ CONFIG_FB_MSM_MDSS_WRITEBACK=y
 # CONFIG_FB_MSM_MDSS_MDP3 is not set
 # CONFIG_FB_MSM_MDSS_XLOG_DEBUG is not set
 CONFIG_FB_MSM_MDSS_KCAL_CTRL=y
+CONFIG_STATE_NOTIFIER=y
 # CONFIG_EXYNOS_VIDEO is not set
 # CONFIG_BACKLIGHT_LCD_SUPPORT is not set
 # CONFIG_ADF is not set
@@ -3641,6 +3648,7 @@ CONFIG_MSM_PERFORMANCE=y
 # CONFIG_TRACER_PKT is not set
 CONFIG_MSM_VSENS=y
 CONFIG_SERIAL_NUM=y
+CONFIG_INTELLI_HOTPLUG=y
 CONFIG_MSM_HOTPLUG=y
 CONFIG_MEM_SHARE_QMI_SERVICE=y
 
