Update AGNi pureMIUI/CM v7.3 configs
- fpc and goodix integrated now

--- a/arch/arm64/configs/agni_kenzo-cmMM_defconfig
+++ b/arch/arm64/configs/agni_kenzo-cmMM_defconfig
@@ -43,7 +43,7 @@ CONFIG_BUILDTIME_EXTABLE_SORT=y
 #
 CONFIG_INIT_ENV_ARG_LIMIT=32
 CONFIG_CROSS_COMPILE=""
-CONFIG_LOCALVERSION="-India-AGNi_pureCM-MM_v7.2-MSM8956"
+CONFIG_LOCALVERSION="-India-AGNi_pureCM-MM_v7.3-MSM8956"
 CONFIG_LOCALVERSION_AUTO=y
 CONFIG_DEFAULT_HOSTNAME="(none)"
 CONFIG_SWAP=y
@@ -484,6 +484,7 @@ CONFIG_CPU_FREQ_DEFAULT_GOV_PERFORMANCE=y
 # CONFIG_CPU_FREQ_DEFAULT_GOV_ELEMENTALX is not set
 # CONFIG_CPU_FREQ_DEFAULT_GOV_BLU_ACTIVE is not set
 # CONFIG_CPU_FREQ_DEFAULT_GOV_CAFACTIVE is not set
+# CONFIG_CPU_FREQ_DEFAULT_GOV_WHEATLEY is not set
 CONFIG_CPU_FREQ_GOV_PERFORMANCE=y
 CONFIG_CPU_FREQ_GOV_POWERSAVE=y
 CONFIG_CPU_FREQ_GOV_USERSPACE=y
@@ -497,11 +498,12 @@ CONFIG_CPU_FREQ_GOV_CONSERVATIVE=y
 CONFIG_CPU_FREQ_GOV_IMPULSE=y
 CONFIG_CPU_FREQ_GOV_DARKNESS=y
 CONFIG_CPU_FREQ_GOV_ALUCARD=y
-# CONFIG_CPU_FREQ_GOV_ZZMOOVE is not set
+CONFIG_CPU_FREQ_GOV_ZZMOOVE=y
 CONFIG_CPU_FREQ_GOV_IRONACTIVE=y
 CONFIG_CPU_FREQ_GOV_RELAXED=y
 CONFIG_CPU_FREQ_GOV_DESPAIR=y
 CONFIG_CPU_FREQ_GOV_BLU_ACTIVE=y
+CONFIG_CPU_FREQ_GOV_WHEATLEY=y
 CONFIG_CPU_BOOST=y
 # CONFIG_GENERIC_CPUFREQ_CPU0 is not set
 
@@ -1720,8 +1722,8 @@ CONFIG_SENSORS_BMA2X2=y
 CONFIG_SENSORS_MC3430=y
 CONFIG_SENSORS_ISL29044A=y
 CONFIG_INPUT_FINGERPRINT=y
-CONFIG_INPUT_FPC1020=m
-CONFIG_FINGERPRINT_GOODIX_GF318M=m
+CONFIG_INPUT_FPC1020=y
+CONFIG_FINGERPRINT_GOODIX_GF318M=y
 # CONFIG_FINGERPRINT_FPC1020 is not set
 # CONFIG_FINGERPRINT_FPC1020_TA is not set
 
