Update AGNi pureMIUI/CM v7.6 configs

--- a/arch/arm64/configs/agni_kenzo-cmN_defconfig
+++ b/arch/arm64/configs/agni_kenzo-cmN_defconfig
@@ -43,7 +43,7 @@ CONFIG_BUILDTIME_EXTABLE_SORT=y
 #
 CONFIG_INIT_ENV_ARG_LIMIT=32
 CONFIG_CROSS_COMPILE=""
-CONFIG_LOCALVERSION="-India-AGNi_pureCM-N_v7.5-MSM8956"
+CONFIG_LOCALVERSION="-India-AGNi_pureCM-N_v7.6-MSM8956"
 CONFIG_LOCALVERSION_AUTO=y
 CONFIG_DEFAULT_HOSTNAME="(none)"
 CONFIG_SWAP=y
@@ -1142,7 +1142,7 @@ CONFIG_USB_EXT_TYPE_C_PERICOM=y
 CONFIG_USB_EXT_TYPE_C_TI=y
 # CONFIG_TI_DRV2667 is not set
 # CONFIG_QCOM_LIQUID_DOCK is not set
-CONFIG_UID_CPUTIME=y
+CONFIG_UID_SYS_STATS=y
 # CONFIG_MIUI_8_QCRYPTO_MODULES_HACK is not set
 # CONFIG_C2PORT is not set
 
