cpufreq: implement cultivation governor v1.5
cpufreq: cultivation: bring in initial release
 -based off of caf 4.4 commits
 -uses per-cpu timers
 -use display_state for screen off timer
    with option to set different timer rate when screen off
 -improrted fastlane with threshold from blu_active
Signed-off-by: mydongistiny <jaysonedson@gmail.com>

cpufreq: cultivation: update with a few new tuneables
added in:
go_lowspeed_load
validate above_hispeed_delay
check hispeed_freq is within the policy limits
powersave_bias
version bump to 1.5
Signed-off-by: mydongistiny <jaysonedson@gmail.com>

--- a/drivers/cpufreq/Kconfig
+++ b/drivers/cpufreq/Kconfig
@@ -218,6 +218,12 @@ config CPU_FREQ_DEFAULT_GOV_WHEATLEY
 	---help---
 	  Use the CPUFreq governor 'wheatley' as default.
 
+config CPU_FREQ_DEFAULT_GOV_CULTIVATION
+	bool "cultivation"
+	select CPU_FREQ_GOV_CULTIVATION
+	help
+	Use the CPUFreq governor 'cultivation' as default.
+
 endchoice
 
 config CPU_FREQ_GOV_PERFORMANCE
@@ -425,6 +431,12 @@ config CPU_FREQ_GOV_BLU_ACTIVE
 config CPU_FREQ_GOV_WHEATLEY
 	tristate "'wheatley' cpufreq governor"
 	depends on CPU_FREQ
+
+config CPU_FREQ_GOV_CULTIVATION
+	tristate "'cultivation' cpufreq governor"
+	depends on CPU_FREQ
+	help
+	  'cultivation' - another tuned interactive with extra options
 
 config CPU_BOOST
 	tristate "Event base short term CPU freq boost"
