charger: allow more amperage and heavier amperage throttle on temperature
QC2.0 allows for maximum of 3A of charging so we should allow it here too.
HVDCP userspace binary makes the connection between userspace, Kernel and charger
to negotiate the appropriate voltage and amperage anyway so we should allow it all.

Charging amperage should throttle based on battery temperature. Preivously the
values were too high so even if the temperate was high enough it wouldn't use
lower amperage values. With this commit the reference values from QC have been set.
Confirmed not drawing more than 1.5A from a QC2.0 charger if the batter temperature
high ~40ºC while still drawing the maximum amperage from my QC2.0 charger if it's cooler.

Not sure if Kenzo's HVDCP negotiates 12V. My charger has 9V->2A and 12V->1.5A, though
I never see it charge at 1.5A at the speed it should charge on a 12V draw.

Signed-off-by: Francisco Franco <franciscofranco.1990@gmail.com>

--- a/arch/arm/boot/dts/qcom/msm-pmi8950.dtsi
+++ b/arch/arm/boot/dts/qcom/msm-pmi8950.dtsi
@@ -199,13 +199,13 @@
 			#size-cells = <1>;
 
 			qcom,iterm-ma = <100>;
+			qcom,fastchg-current-ma = <3000>;
 			qcom,float-voltage-mv = <4200>;
 			qcom,resume-delta-mv = <200>;
-			qcom,fastchg-current-ma = <2400>;
 			qcom,chg-inhibit-fg;
 			qcom,rparasitic-uohm = <100000>;
 			qcom,bms-psy-name = "bms";
-			qcom,thermal-mitigation = <2400 2200 1800 800 0>;
+			qcom,thermal-mitigation = <1500 700 600 325>;
 			qcom,parallel-usb-min-current-ma = <1400>;
 			qcom,parallel-usb-9v-min-current-ma = <900>;
 			qcom,parallel-allowed-lowering-ma = <500>;
@@ -214,6 +214,7 @@
 			qcom,charge-unknown-battery;
 			qcom,force-aicl-rerun;
 			qcom,aicl-rerun-period-s = <180>;
+			qcom,float-voltage-comp = <11>;
 
 			qcom,chgr@1000 {
 				reg = <0x1000 0x100>;
