--- a/drivers/input/fingerprint/Makefile
+++ b/drivers/input/fingerprint/Makefile
@@ -4,7 +4,6 @@
 
 # Each configuration option enables a list of files.
 
-obj-$(CONFIG_FINGERPRINT_FPC1020)	+= fpc1020/
-obj-$(CONFIG_FINGERPRINT_FPC1020_TA)	+= fpc1020_ta/
-obj-$(CONFIG_INPUT_FPC1020)		+= fpc1020_tee.o
-obj-$(CONFIG_FINGERPRINT_GOODIX_GF318M) += goodix/
+obj-$(CONFIG_FINGERPRINT_FPC1020_HYDROGEN)	+= fpc1020_hydrogen/
+obj-$(CONFIG_FINGERPRINT_FPC1020_KENZO)	+= fpc1020_kenzo/
+obj-$(CONFIG_FINGERPRINT_GOODIX_GF318M)	+= goodix/
