AGNi pureLOS v2.4 configs
Signed-off-by: psndna88 <psndna88@gmail.com>

--- a/arch/arm/configs/agni_dior-cmN_defconfig
+++ b/arch/arm/configs/agni_dior-cmN_defconfig
@@ -42,7 +42,7 @@ CONFIG_IRQ_WORK=y
 CONFIG_EXPERIMENTAL=y
 CONFIG_INIT_ENV_ARG_LIMIT=32
 CONFIG_CROSS_COMPILE=""
-CONFIG_LOCALVERSION="-India-AGNi_pureLOS-N_v2.3-MSM8226"
+CONFIG_LOCALVERSION="-India-AGNi_pureLOS-N_v2.4-MSM8226"
 # CONFIG_LOCALVERSION_AUTO is not set
 CONFIG_HAVE_KERNEL_GZIP=y
 CONFIG_HAVE_KERNEL_LZMA=y
@@ -510,12 +510,14 @@ CONFIG_MSM_RTB=y
 CONFIG_MSM_RTB_SEPARATE_CPUS=y
 # CONFIG_MSM_EBI_ERP is not set
 # CONFIG_MSM_DCVS is not set
+CONFIG_MSM_HOTPLUG=y
 # CONFIG_MSM_CPR is not set
 # CONFIG_MSM_CACHE_DUMP is not set
 # CONFIG_MSM_HSIC_SYSMON is not set
 # CONFIG_MSM_ENABLE_WDOG_DEBUG_CONTROL is not set
 # CONFIG_USE_DEV_CTRL_VOLUME is not set
 # CONFIG_MSM_CPU_PWRCTL is not set
+CONFIG_FORCE_FAST_CHARGE=y
 CONFIG_MSM_COMMON_LOG=y
 CONFIG_MSM_BOOT_STATS=y
 CONFIG_MSM_XPU_ERR_FATAL=y
@@ -758,6 +760,7 @@ CONFIG_PM=y
 # CONFIG_PM_DEBUG is not set
 # CONFIG_APM_EMULATION is not set
 CONFIG_PM_CLK=y
+CONFIG_WQ_POWER_EFFICIENT_DEFAULT=y
 CONFIG_CPU_PM=y
 CONFIG_SUSPEND_TIME=y
 CONFIG_ARCH_SUSPEND_POSSIBLE=y
@@ -1738,6 +1741,7 @@ CONFIG_UNIX98_PTYS=y
 # CONFIG_TRACE_SINK is not set
 # CONFIG_DEVMEM is not set
 # CONFIG_DEVKMEM is not set
+CONFIG_FRANDOM=y
 
 #
 # Serial drivers
