arm64/boot: allow lz4 compressed Image.lz4 & Image.lz4-dtb
lz4 compressed Image needs - "liblz4-tool" ubuntu package

Signed-off-by: psndna88 <psndna88@gmail.com>

--- a/arch/arm/boot/compressed/Makefile
+++ b/arch/arm/boot/compressed/Makefile
@@ -91,6 +91,7 @@ suffix_$(CONFIG_KERNEL_GZIP) = gzip
 suffix_$(CONFIG_KERNEL_LZO)  = lzo
 suffix_$(CONFIG_KERNEL_LZMA) = lzma
 suffix_$(CONFIG_KERNEL_XZ)   = xzkern
+suffix_$(CONFIG_KERNEL_LZ4)   = lz4
 
 # Borrowed libfdt files for the ATAG compatibility mode
 
