--- a/arch/arm64/boot/Makefile
+++ b/arch/arm64/boot/Makefile
@@ -16,7 +16,14 @@
 
 include $(srctree)/arch/arm64/boot/dts/qcom/Makefile
 
-targets := Image Image.gz
+ifeq ($(CONFIG_KERNEL_GZIP),y)
+COMP_TYPE=gz
+endif
+ifeq ($(CONFIG_KERNEL_LZ4),y)
+COMP_TYPE=lz4
+endif
+
+targets := Image Image.$(COMP_TYPE)
 
 DTB_NAMES := $(subst $\",,$(CONFIG_BUILD_ARM64_APPENDED_DTB_IMAGE_NAMES))
 ifneq ($(DTB_NAMES),)
@@ -29,18 +36,24 @@ DTB_OBJS := $(addprefix $(srctree)/arch/arm/boot/dts/,$(DTB_LIST))
 $(obj)/Image: vmlinux FORCE
 	$(call if_changed,objcopy)
 
-$(obj)/Image.gz: $(obj)/Image FORCE
+ifeq ($(CONFIG_KERNEL_GZIP),y)
+$(obj)/Image.$(COMP_TYPE): $(obj)/Image FORCE
 	$(call if_changed,gzip)
+endif
+ifeq ($(CONFIG_KERNEL_LZ4),y)
+$(obj)/Image.$(COMP_TYPE): $(obj)/Image FORCE
+	$(call if_changed,lz4)
+endif
 
-$(obj)/Image.gz-dtb: $(obj)/Image.gz $(DTB_OBJS) FORCE
+$(obj)/Image.$(COMP_TYPE)-dtb: $(obj)/Image.$(COMP_TYPE) $(DTB_OBJS) FORCE
 	$(call if_changed,cat)
 
 install: $(obj)/Image
 	$(CONFIG_SHELL) $(srctree)/$(src)/install.sh $(KERNELRELEASE) \
 	$(obj)/Image System.map "$(INSTALL_PATH)"
 
-zinstall: $(obj)/Image.gz
+zinstall: $(obj)/Image.$(COMP_TYPE)
 	$(CONFIG_SHELL) $(srctree)/$(src)/install.sh $(KERNELRELEASE) \
-	$(obj)/Image.gz System.map "$(INSTALL_PATH)"
+	$(obj)/Image.$(COMP_TYPE) System.map "$(INSTALL_PATH)"
 
-clean-files := Image Image-dtb Image.gz Image.gz-dtb
+clean-files := Image Image-dtb Image.$(COMP_TYPE) Image.$(COMP_TYPE)-dtb
