--- a/arch/arm64/configs/agni_kenzo-miuiMM_defconfig
+++ b/arch/arm64/configs/agni_kenzo-miuiMM_defconfig
@@ -3573,6 +3573,7 @@ CONFIG_MOBICORE_API=y
 # Android
 #
 CONFIG_ANDROID_BINDER_IPC=y
+CONFIG_ANDROID_BINDER_DEVICES="binder,hwbinder"
 # CONFIG_CORESIGHT is not set
 # CONFIG_BIF is not set
 CONFIG_SENSORS=y
